--- a/AdvancedPython_Regular_Expressions-Lecture-Updated-File-Rangers59 (2)-Copy1.ipynb
+++ b/AdvancedPython_Regular_Expressions-Lecture-Updated-File-Rangers59 (2)-Copy1.ipynb
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -628,12 +628,14 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[63], line 16\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# You can also use the $ at the end of your compile expression -- this stops the search\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m#.com OR .org => com|org\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;66;03m#yourfavoriteband@g6.org\u001b[39;00m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m#None\u001b[39;00m\n\u001b[0;32m     14\u001b[0m pattern_email \u001b[38;5;241m=\u001b[39m re\u001b[38;5;241m.\u001b[39mcompile(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m[\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m.-]+@[\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m.-]+(?:\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m.[\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mw]+)+\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m---> 16\u001b[0m emails \u001b[38;5;241m=\u001b[39m \u001b[43mpattern_email\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfindall\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmy_emails\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28mprint\u001b[39m(emails)\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m email \u001b[38;5;129;01min\u001b[39;00m my_emails\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n",
+      "Cell \u001b[1;32mIn[1], line 18\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# You can also use the $ at the end of your compile expression -- this stops the search\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m#.com OR .org => com|org\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m#yourfavoriteband@g6.org\u001b[39;00m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;66;03m#None\u001b[39;00m\n\u001b[0;32m     16\u001b[0m pattern_email \u001b[38;5;241m=\u001b[39m re\u001b[38;5;241m.\u001b[39mcompile(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m[a-z]+@[a-z0-9]+\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124md.(org)\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m[a-z0-9]+@[a-z]+\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m.(com)\u001b[39m\u001b[38;5;124m\"\u001b[39m) \n\u001b[1;32m---> 18\u001b[0m emails \u001b[38;5;241m=\u001b[39m \u001b[43mpattern_email\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmatch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmy_emails\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28mprint\u001b[39m(emails)\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m email \u001b[38;5;129;01min\u001b[39;00m my_emails\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n",
       "\u001b[1;31mTypeError\u001b[0m: expected string or bytes-like object"
      ]
     }
    ],
    "source": [
+    "import re\n",
+    "\n",
     "my_emails = [\"jordanw@codingtemple.orgcom\", \"pocohontas1776@gmail.com\", \"helloworld@aol..com\",\n",
     "             \"yourfavoriteband@g6.org\", \"@codingtemple.com\"]\n",
     "\n",
@@ -647,9 +649,9 @@
     "#None\n",
     "#yourfavoriteband@g6.org\n",
     "#None\n",
-    "pattern_email = re.compile(r'[\\w\\.-]+@[\\w\\.-]+(?:\\.[\\w]+)+')\n",
+    "pattern_email = re.compile(r\"[a-z]+@[a-z0-9]+\\d.(org)\" \"[a-z0-9]+@[a-z]+\\.(com)\") \n",
     "\n",
-    "emails = pattern_email.findall(my_emails)\n",
+    "emails = pattern_email.match(my_emails)\n",
     "print(emails)\n",
     "\n",
     "for email in my_emails.split(\",\"):\n",
@@ -849,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -858,17 +860,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['awkins', 'erek', 'derek@codingtemple', 'com', '(', 'eacher', 'oding', 'emple', '@derekhawkins']\n",
-      "['hai', 'o', 'mozhai@codingtemple', 'com', '(', 'eacher', 'oding', 'emple']\n",
-      "['ohnson', 'oe', 'joejohnson@codingtemple', 'com', 'ohson', 'oe']\n",
-      "['sterberg', 'ven', 'rik', 'governor@norrbotten', 'co', 'se', 'overnor', 'orrbotten', '@sverik']\n",
-      "['im', 'tim@killerrabbit', 'com', 'nchanter', 'iller', 'abbit', 'ave']\n",
-      "['utz', 'yan', 'ryanb@codingtemple', 'com', '(', 'oding', 'emple', '@ryanbutz']\n",
-      "['octor', 'he', 'doctor', 'companion@tardis', 'co', 'uk', 'ime', 'ord', 'allifrey']\n",
-      "['xampleson', 'xample', 'me@example', 'com', 'xample', 'xample', 'o', '@example']\n",
-      "['ael', 'ipal', 'ripalp@codingtemple', 'com', '(', 'eacher', 'oding', 'emple', '@ripalp']\n",
-      "['ader', 'arth', 'darth', 'vader@empire', 'gov', '(', 'ith', 'ord', 'alactic', 'mpire', '@darthvader']\n",
-      "['ernandez', 'de', 'la', 'ega', 'anz', 'aria', 'eresa', 'mtfvs@spain', 'gov', 'irst', 'eputy', 'rime', 'inister', 'panish', 'ov']\n"
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n"
      ]
     }
    ],
@@ -882,7 +884,7 @@
     "    \n",
     "for line in data_names:\n",
     "    # if line has match with @twitter_handle\n",
-    "    name_pattern = re.compile(r'[](\\b@[a-z]+')\n",
+    "    name_pattern = re.compile(r'[a-zA-Z]/+@[a-z]')\n",
     "    print(name_pattern.findall(line))"
    ]
   },
